--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,10 @@
 buildscript {
     ext.kotlin_version = '1.3.50'
     repositories {
-        google()
+        google()  // Google's Maven repository
+        maven {
+            url 'https://maven.fabric.io/public'
+        }
         jcenter()
         
     }
@@ -11,6 +14,8 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.3.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.3.2'
+        // Add dependency
+        classpath 'io.fabric.tools:gradle:1.31.2'  // Crashlytics plugin
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -19,6 +24,7 @@ buildscript {
 allprojects {
     repositories {
         google()
+        maven { url "https://maven.google.com/" }
         jcenter()
         
     }
